--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>bank-products</title>
+    <title>Banco Pichincha</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://www.bancopichincha.com.co/o/pichincha-theme/images/icon/favicon-32x32.png" />
   </head>
   <body>
     <bank-products-root></bank-products-root>
